--- a/src/_banner.scss
+++ b/src/_banner.scss
@@ -5,6 +5,7 @@
     background-size: cover;
     background-position: center center;
     height: 50rem;
+    margin-top: 3rem;
   }
   
   .contenido_texto {
